Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-76025 Specify the QML language and write a QML-to-C++ compiler
  3. QTBUG-89501

qmltypes format does not properly specify extended types

XMLWordPrintable

    • bdb2b66f3d7d027e3022aabd63fe73d305ed058f (qt/qtdeclarative/dev)

      You can register extended types via the QML_EXTENDED macro. The extension is valid only on the topmost non-composite type in the inheritance chain. So, for example if you have a composite type A that inherits a non-composite B that inherits a non-composite C and both B and C have extensions, then only the extension on B will be visible to clients of A.

      The qmltypes format mixes the extension into the specification of the actual type. Therefore, we cannot retrieve this distinction from the qmltypes. We need to change the format so that extensions are listed separately.

      Actually, right now, qmltyperegistrar's support for extended types is rather incomplete. It does not generate descriptions for the enums in the Qt object, for example. That's bad.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            fawzi Fawzi Mohamed
            ulherman Ulf Hermann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes